# openjdk-adoptium-proto-plugin

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
build-plugins/: gradle.toml
src/: adoptium_api.rs  lib.rs  proto.rs
tests/: download_test.rs  environment_test.rs  metadata_test.rs  versions_test.rs
