[package]
name = "openjdk_adoptium_tool"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.1"
proto_pdk = "0.32.2"
rustc-hash = "2.1.1"
serde = "1"
url = "2"

[features]
default = ["wasm"]
wasm = []

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
